--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ window._satellite._monitors.push({
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
 
-<title>Krisinformation.se - Information från svenska myndigheter, länsstyrelser och kommuner</title>
+<title>Festinformation.se - Information från svenska festkommittéer, toastmasters och liknande.</title>
 
 <link href="./festinformation_files/krisinfo.css" type="text/css" rel="stylesheet" media="all">
 
@@ -169,9 +169,8 @@ window._satellite._monitors.push({
 
 
 
-<meta property="og:title" content="Startsida">
+<meta property="og:title" content="Festinformation">
 <meta property="og:description" content="">
-    <meta property="og:image" content="https://www.krisinformation.se/globalassets/startpage/logo_platt_200x200-1.png">
 
 
     
