--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ window._satellite._monitors.push({
 </div>
 <div class="section logo-container">
 
-        <h1 class="logo" style="">
+        <h1 class="logo" style="background-image: url('https://festinformation.se/festinformation_files/image.png')">
             <span class="show-for-sr">Krisinformation.se, Information från svenska myndigheter, länsstyrelser och kommuner</span>
         </h1>
 </div>
