--- a/index.html
+++ b/index.html
@@ -3002,7 +3002,7 @@ window._satellite._monitors.push({
 </div></div><div>
 
 <div class="Twitter isWhite isEmbedded">
-        <h2 class="sectionHeader tight">@krisinformation på Twitter</h2>
+        <h2 class="sectionHeader tight">@Festinformation på Twitter</h2>
     
     <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="twitter-timeline twitter-timeline-rendered" style="position: static; visibility: visible; display: inline-block; width: 520px; padding: 0px; border: none; max-width: 100%; min-width: 180px; margin-top: 0px; margin-bottom: 0px; height: 344.414px;" data-widget-id="profile:krisinformation" title="Twitter Tidslinje" src="./festinformation_files/saved_resource.html"></iframe>
 </div>
@@ -3459,30 +3459,30 @@ window._satellite._monitors.push({
 
 
 <div class="logo">            
-    <img class="sv" src="./festinformation_files/krisinformation_undertext_alt.svg" alt="Krisinformation logotyp">
-    <img class="en" src="./festinformation_files/krisinformation_undertext_en.svg" alt="Krisinformation logotyp">
+    <img class="sv" src="./festinformation_files/krisinformation_undertext_alt.svg" alt="Festinformation logotyp">
+    <img class="en" src="./festinformation_files/krisinformation_undertext_en.svg" alt="Festinformation logotyp">
 </div>
 
 
         <div class="BlockSocial">
-                                <h2>Krisinformation på sociala medier</h2>
+                                <h2>Festinformation på sociala medier</h2>
             <ul>
                     <li><a class="facebook" href="https://www.facebook.com/Krisinformation" target="_blank">
-   <span class="show-for-sr">Krisinformation på,  </span> Facebook
+   <span class="show-for-sr">Festinformation på,  </span> Facebook
 </a>
 
 
 
 </li>
                     <li><a class="twitter" href="https://twitter.com/krisinformation" target="_blank">
-   <span class="show-for-sr">Krisinformation på,  </span> Twitter
+   <span class="show-for-sr">Festinformation på,  </span> Twitter
 </a>
 
 
 
 </li>
                     <li><a class="instagram" href="https://www.instagram.com/krisinformation/" target="_blank">
-   <span class="show-for-sr">Krisinformation på,  </span> Instagram
+   <span class="show-for-sr">Festinformation på,  </span> Instagram
 </a>
 
 
