--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <!-- saved from url=(0031)https://www.krisinformation.se/ -->
 <html lang="sv" class="js js-adv css-adv flex"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+    <script>
+        document.addEventListener('click', function (e) {
+            e.preventDefault();
+        });
+    </script>
 <script src="./festinformation_files/widgets.js"></script><script src="./festinformation_files/webReader.js" type="text/javascript" id="rs_req_Init"></script><script id="dataslayerLaunchMonitors">
 // console.log('** dataslayer: injecting Launch monitors **');
 window._satellite = window._satellite || {};
@@ -3459,8 +3464,8 @@ window._satellite._monitors.push({
 
 
 <div class="logo">            
-    <img class="sv" src="./festinformation_files/krisinformation_undertext_alt.svg" alt="Festinformation logotyp">
-    <img class="en" src="./festinformation_files/krisinformation_undertext_en.svg" alt="Festinformation logotyp">
+    <img class="sv" src="./festinformation_files/image.png" alt="Festinformation logotyp">
+    <img class="en" src="./festinformation_files/image.png" alt="Festinformation logotyp">
 </div>
 
 
