--- a/index.html
+++ b/index.html
@@ -2993,7 +2993,7 @@ window._satellite._monitors.push({
 </a>
                         </h2>
 
-                        <p>Genom beslut av Myndigheten för samhälsskydd och bröllopsberedskap och Festhälsomyndigheten gäller tills vidare följande allmänna rekommendation: <i>sluta pilla på din telefon och delta i festen istället.</i></p>
+                        <p>Genom beslut av Myndigheten för samhällsskydd och bröllopsberedskap och Festhälsomyndigheten gäller tills vidare följande allmänna rekommendation: <i>sluta pilla på din telefon och delta i festen istället.</i></p>
                   
                     
 
@@ -3006,6 +3006,8 @@ window._satellite._monitors.push({
             </div>
         </div>
 </div></div>
+
+<h2 style="margin: -10px 0 20px">Övriga nyheter från Festinformation.se</h2>
 <div>
 <div class="ThemeTeaser Default">
     <div class="hd border-left">
@@ -3065,7 +3067,7 @@ window._satellite._monitors.push({
 
                     <ul class="link-list">
                             <li class="link-list-item">
-                                <a href="https://www.festinformation.se/detta-kan-handa/karntekniska-olyckor/din-beredskap-for-karntekniska-olyckor/">Läs mer om hur du förbereder dig för en kärnteknisk olycka</a>
+                                <a href="#">Läs mer om hur du förbereder dig för en festteknisk olycka</a>
                             </li>
                     </ul>
                 </div>
